--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "maronfranc",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^13.1.2",
     "axios": "^0.19.0",
+    "csv-parser": "^2.3.2",
+    "csv-writer": "^1.5.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
